[gd_scene load_steps=21 format=2]

[ext_resource path="res://entities/enemy/enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/Rotoscoped zombie and soldier/Rotoscoped zombie and soldier/Spritesheet/zombie-walking.png" type="Texture" id=2]
[ext_resource path="res://entities/enemy/states/state_machine.gd" type="Script" id=3]
[ext_resource path="res://entities/enemy/states/roam_state.gd" type="Script" id=4]
[ext_resource path="res://entities/enemy/states/death_state.gd" type="Script" id=5]
[ext_resource path="res://entities/enemy/states/hunt_state.gd" type="Script" id=6]
[ext_resource path="res://entities/enemy/vision.gd" type="Script" id=7]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 313, 375 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 313, 0, 313, 375 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 626, 0, 313, 375 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 939, 0, 313, 375 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1252, 0, 313, 375 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1565, 0, 313, 375 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1878, 0, 313, 375 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2191, 0, 313, 375 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2504, 0, 313, 375 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2817, 0, 313, 375 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3130, 0, 313, 375 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=13]
radius = 72.0

[node name="Enemy" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 2
script = ExtResource( 1 )

[node name="Vision" type="Node2D" parent="."]
modulate = Color( 1, 0.219608, 0.219608, 0.403922 )
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.25098, 0.25098, 0.25098, 1 )
light_mask = 3
rotation = 1.5708
frames = SubResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 13 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="RoamState" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="HuntState" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="HuntTimer" type="Timer" parent="StateMachine/HuntState"]
wait_time = 10.0
one_shot = true

[node name="TrackTimer" type="Timer" parent="StateMachine/HuntState"]
wait_time = 0.2

[node name="DeathState" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Raycasts" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
target_desired_distance = 5.0

[node name="ChillTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="timeout" from="StateMachine/HuntState/HuntTimer" to="StateMachine/HuntState" method="_on_HuntTimer_timeout"]
[connection signal="timeout" from="StateMachine/HuntState/TrackTimer" to="StateMachine/HuntState" method="_on_TrackTimer_timeout"]
[connection signal="timeout" from="ChillTimer" to="StateMachine/RoamState" method="_on_ChillTimer_timeout"]
